# haptic_feedback_generation

./: CMakeLists.txt  package.xml
include/haptic_feedback_generation/: hapticFeedbackGenerator.h
launch/: feedback_generator.launch.py
src/: hapticFeedbackGenerator.cpp  haptic_feedback_generator_node.cpp
