<?xml version="1.0"?>
<package format="3">
  <name>haptic_feedback_generation</name>

  <version>1.0.0</version>
  <description>*</description>

  <maintainer email="felipeandres.valenzuelar@gmail.com">Felipe Valenzuela</maintainer>
  <author email="felipeandres.valenzuelar@gmail.com">Felipe Valenzuela</author>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>brunner_can_interface</build_depend>
  <build_depend>haptic_station_interface</build_depend>
  <build_depend>kacaopen</build_depend>
  <build_depend>hammer_msgs</build_depend>
  <build_depend>haptic_station_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>brunner_can_interface</exec_depend>
  <exec_depend>haptic_station_interface</exec_depend>
  <exec_depend>kacaopen</exec_depend>
  <exec_depend>hammer_msgs</exec_depend>
  <exec_depend>haptic_station_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
